--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,9 +19,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+   
+    <link rel="stylesheet" href="//vjs.zencdn.net/5.12/video-js.css" />
     <title>React App</title>
   </head>
   <body>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-with-addons.js"></script>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.js"></script>
+      <script src="//vjs.zencdn.net/5.12/video.js"></script>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
