--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,7 +21,7 @@
     -->
    
     <link rel="stylesheet" href="//vjs.zencdn.net/5.12/video-js.css" />
-    <title>React App</title>
+    <title>Hamro Paathsala</title>
   </head>
   <body>
       <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-with-addons.js"></script>
